fix: fixes edge spacing

--- a/SmartHomeCapstone/frontend/src/components/header/Header.css
+++ b/SmartHomeCapstone/frontend/src/components/header/Header.css
@@ -19,7 +19,7 @@ main {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  max-width: 1100px;
+  max-width: 1300px;
   margin: 0 auto;
 }
 
